fix scale line overflow

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -7,3 +7,7 @@ a {
   border-bottom-style: dashed;
   cursor: pointer;
 }
+
+.leaflet-control-scale-line {
+  overflow: visible !important;
+}
